--- a/exercises/01-variables/06-fix-bug.html
+++ b/exercises/01-variables/06-fix-bug.html
@@ -8,43 +8,42 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EXERCISE</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <form id="form" action="GET" class="container pt-5 mb-5">
-      <label for="name">Your Name:</label>
-      <input id="name" type="text" />
-      <button class="btn btn-primary" type="submit">Next</button>
-    </form>
-    <script>
-      /**
-       * Note: We will be going over a lot of what this code is doing later when we talk about the "DOM".
-       * For now, you just need to use what you've learned about variables to complete this exercise.
-       * If you get this exercise right, after entering your name and clicking "Next",
-       * you should see a popup that says "Hello YOUR_NAME"
-       */
 
-      // Do not change this.
-      !(function () {
-        document.querySelector("#form").addEventListener("submit", (e) => {
-          e.preventDefault();
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EXERCISE</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+</head>
 
-          document.querySelector("#name").value; // Change this line only. Set me to a variable called "content".
+<body>
+  <form id="form" action="GET" class="container pt-5 mb-5">
+    <label for="name">Your Name:</label>
+    <input id="name" type="text" />
+    <button class="btn btn-primary" type="submit">Next</button>
+  </form>
+  <script>
+    /**
+     * Note: We will be going over a lot of what this code is doing later when we talk about the "DOM".
+     * For now, you just need to use what you've learned about variables to complete this exercise.
+     * If you get this exercise right, after entering your name and clicking "Next",
+     * you should see a popup that says "Hello YOUR_NAME"
+     */
 
-          // Do not change this
-          alert("Hello " + content);
-        });
-      })();
-    </script>
-  </body>
+    // Do not change this.
+    !(function () {
+      document.querySelector("#form").addEventListener("submit", (e) => {
+        e.preventDefault();
+
+        const content = document.querySelector("#name").value; // Change this line only. Set me to a variable called "content".
+
+        // Do not change this
+        alert("Hello " + content);
+      });
+    })();
+  </script>
+</body>
+
 </html>
