--- a/exercises/06-control-flow/03-if-statement.html
+++ b/exercises/06-control-flow/03-if-statement.html
@@ -8,82 +8,81 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EXERCISE</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-    <style>
-      #answer {
-        display: inline-block;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container pt-5 mb-5">
-      <h1 id="message"></h1>
-      <form id="form" method="POST" action="#">
-        <label for="username">Username</label>
-        <input id="username" type="text" />
-        <label for="password">Password</label>
-        <input id="password" type="password" />
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-      <button type="button" id="logoutBtn" class="btn btn-primary">
-        Logout
-      </button>
-    </div>
-    <script>
-      /**
-       * Note: We will be going over a lot of what this code is doing later when we talk about the "DOM".
-       * For now, you just need to use what you've learned about numbers to complete this exercise.
-       * If you get this exercise right, after you fill out the form and click "Login",
-       * you should see "Welcome back!".
-       * When you click "Logout", you should see the "Login" form, and it should say
-       * "Please login" again.
-       */
 
-      // Do not change this.
-      !(function () {
-        let isLoggedIn = false;
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EXERCISE</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+  <style>
+    #answer {
+      display: inline-block;
+    }
+  </style>
+</head>
 
-        const displayMessage = () => {
-          // I can see "isLoggedIn" from here.
+<body>
+  <div class="container pt-5 mb-5">
+    <h1 id="message"></h1>
+    <form id="form" method="POST" action="#">
+      <label for="username">Username</label>
+      <input id="username" type="text" />
+      <label for="password">Password</label>
+      <input id="password" type="password" />
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+    <button type="button" id="logoutBtn" class="btn btn-primary">
+      Logout
+    </button>
+  </div>
+  <script>
+    /**
+     * Note: We will be going over a lot of what this code is doing later when we talk about the "DOM".
+     * For now, you just need to use what you've learned about numbers to complete this exercise.
+     * If you get this exercise right, after you fill out the form and click "Login",
+     * you should see "Welcome back!".
+     * When you click "Logout", you should see the "Login" form, and it should say
+     * "Please login" again.
+     */
 
-          // Change the line below so that it only executes if "isLoggedIn" is true
-          document.querySelector("#message").textContent = "Welcome back!";
-          // Change this line below so that it only executes if "isLoggedIn" is false
-          document.querySelector("#message").textContent = "Please login";
-        };
+    // Do not change this.
+    !(function () {
+      let isLoggedIn = false;
 
-        // Do not change anything below
-        const login = () => {
-          isLoggedIn = true;
-          document.querySelector("#form").style.display = "none";
-          document.querySelector("#logoutBtn").style.display = "block";
-          displayMessage();
-        };
-        const logout = () => {
-          isLoggedIn = false;
-          document.querySelector("#form").style.display = "block";
-          document.querySelector("#logoutBtn").style.display = "none";
-          displayMessage();
-        };
+      const displayMessage = () => {
+        // I can see "isLoggedIn" from here.
 
-        document.querySelector("#form").addEventListener("submit", (e) => {
-          e.preventDefault();
-          login();
-        });
-        document.querySelector("#logoutBtn").addEventListener("click", logout);
+        // Change the line below so that it only executes if "isLoggedIn" is true
+        if (isLoggedIn) document.querySelector("#message").textContent = "Welcome back!";
+        // Change this line below so that it only executes if "isLoggedIn" is false
+        else document.querySelector("#message").textContent = "Please login";
+      };
 
-        logout();
-      })();
-    </script>
-  </body>
+      // Do not change anything below
+      const login = () => {
+        isLoggedIn = true;
+        document.querySelector("#form").style.display = "none";
+        document.querySelector("#logoutBtn").style.display = "block";
+        displayMessage();
+      };
+      const logout = () => {
+        isLoggedIn = false;
+        document.querySelector("#form").style.display = "block";
+        document.querySelector("#logoutBtn").style.display = "none";
+        displayMessage();
+      };
+
+      document.querySelector("#form").addEventListener("submit", (e) => {
+        e.preventDefault();
+        login();
+      });
+      document.querySelector("#logoutBtn").addEventListener("click", logout);
+
+      logout();
+    })();
+  </script>
+</body>
+
 </html>
